--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "brewcraft-react-app",
   "version": "1.0.0",
   "private": true,
+  "proxy": "http://localhost:3001",
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-progress": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.0",
-    "amazon-cognito-identity-js": "^6.3.12",
+    "amazon-cognito-identity-js": "^6.3.16",
     "aws-sdk": "^2.1692.0",
     "browser-image-compression": "^2.0.2",
     "class-variance-authority": "^0.7.1",
@@ -22,11 +23,17 @@
     "reactjs-popup": "^2.0.6",
     "tailwind-merge": "^2.5.5",
     "uuid": "^11.0.3"
+    ,
+    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "cookie": "^0.5.0",
+    "dotenv": "^16.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "server": "node server/index.js",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
