--- a/package.json
+++ b/package.json
@@ -8,11 +8,16 @@
     "@radix-ui/react-progress": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "amazon-cognito-identity-js": "^6.3.16",
+    "aws-amplify": "^6.15.9",
     "aws-sdk": "^2.1692.0",
     "browser-image-compression": "^2.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cookie": "^0.5.0",
+    "cors": "^2.8.5",
     "crypto-js": "^4.2.0",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.463.0",
     "react": "^18.2.0",
@@ -23,11 +28,6 @@
     "reactjs-popup": "^2.0.6",
     "tailwind-merge": "^2.5.5",
     "uuid": "^11.0.3"
-    ,
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "cookie": "^0.5.0",
-    "dotenv": "^16.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
