--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1",
     "reactjs-popup": "^2.0.6",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^2.5.5",
     "uuid": "^11.0.3"
   },
