Update deployment guide and parameters for AWS Learner Lab configuration

--- a/Dynamo/cloudformation/main-infrastructure.yaml
+++ b/Dynamo/cloudformation/main-infrastructure.yaml
@@ -225,7 +225,7 @@ Resources:
         InstanceType: !Ref InstanceType
         KeyName: !Ref KeyPairName
         IamInstanceProfile:
-          Name: LabInstanceProfile
+          Name: LabUserProfile
         SecurityGroupIds:
           - !Ref EC2SecurityGroup
         UserData:
