--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "crypto-js": "^4.2.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "framer-motion": "^12.24.12",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.463.0",
     "react": "^18.2.0",
