fix:docker buil workflow

--- a/.github/workflows/build-test-branch.yml
+++ b/.github/workflows/build-test-branch.yml
@@ -25,11 +25,15 @@ jobs:
 
       - name: Build Docker image
         run: |
-          docker build -t ghcr.io/${{ github.repository }}/test-${{ github.ref_name }} .
+          REPO_LC=$(echo "${{ github.repository }}" | tr '[:upper:]' '[:lower:]')
+          TAG_LC=$(echo "test-${{ github.ref_name }}" | tr '[:upper:]' '[:lower:]')
+          docker build -t ghcr.io/$REPO_LC/$TAG_LC .
 
       - name: Push Docker image
         run: |
-          docker push ghcr.io/${{ github.repository }}/test-${{ github.ref_name }}
+          REPO_LC=$(echo "${{ github.repository }}" | tr '[:upper:]' '[:lower:]')
+          TAG_LC=$(echo "test-${{ github.ref_name }}" | tr '[:upper:]' '[:lower:]')
+          docker push ghcr.io/$REPO_LC/$TAG_LC
 
       - name: Mark as test branch
         run: |
