--- a/.github/workflows/docker-build-and-deploy.yml
+++ b/.github/workflows/docker-build-and-deploy.yml
@@ -13,7 +13,7 @@ on:
 
 jobs:
   build-and-deploy:
-    name: Test tokens
+    name: Build and Deploy Docker Image
     runs-on: ubuntu-latest
 
     steps:
@@ -23,16 +23,10 @@ jobs:
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v2
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
+          aws-access-key-id: ${{ var.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ var.AWS_SECRET_ACCESS_KEY }}
+          aws-session-token: ${{ var.AWS_SESSION_TOKEN }}
           aws-region: us-east-1
-
-      - name: Debug Secrets
-        run: |
-          echo "AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}"
-          echo "AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}"
-          echo "AWS_SESSION_TOKEN=${{ secrets.AWS_SESSION_TOKEN }}"
 
       - name: Log in to Amazon ECR
         id: login-ecr
