feat: add GitHub Actions workflows for running tests and building/deploying Docker images to ECR.

--- a/.github/workflows/build-and-deploy-image.yml
+++ b/.github/workflows/build-and-deploy-image.yml
@@ -4,6 +4,12 @@ on:
   push:
     branches:
       - dev
+    paths:
+      - "src/**"
+      - "package.json"
+      - "package-lock.json"
+      - ".github/workflows/build-and-deploy-image.yml"
+  
   workflow_dispatch:
 
 jobs:
