--- a/.github/workflows/force-update-ec2.yml
+++ b/.github/workflows/force-update-ec2.yml
@@ -14,17 +14,20 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Checkout Credentials
+        uses: actions/checkout@v3
+
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v2
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
-          aws-region: us-east-1
+          aws-region: ${{ vars.AWS_REGION }}
 
       - name: Force Update EC2 Instances
         env:
-          AWS_REGION: us-east-1
+          AWS_REGION: ${{ vars.AWS_REGION }}
           SSH_KEY: $HOME/.ssh/labsuser.pem
           ECR_IMAGE: 533266957010.dkr.ecr.us-east-1.amazonaws.com/brewcraft-frontend:latest
         run: |
