--- a/.github/workflows/force-update-ec2.yml
+++ b/.github/workflows/force-update-ec2.yml
@@ -23,11 +23,11 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
-          aws-region: ${{ vars.AWS_REGION }}
+          aws-region: us-east-1
 
       - name: Force Update EC2 Instances
         env:
-          AWS_REGION: ${{ vars.AWS_REGION }}
+          AWS_REGION: us-east
           SSH_KEY: $HOME/.ssh/labsuser.pem
           ECR_IMAGE: 533266957010.dkr.ecr.us-east-1.amazonaws.com/brewcraft-frontend:latest
         run: |
