--- a/.github/workflows/force-update-ec2.yml
+++ b/.github/workflows/force-update-ec2.yml
@@ -12,6 +12,7 @@ jobs:
   update-ec2:
     name: Update EC2 Docker Containers
     runs-on: ubuntu-latest
+    environment: dev
 
     steps:
       - name: Checkout Credentials
