--- a/.github/workflows/force-update-ec2.yml
+++ b/.github/workflows/force-update-ec2.yml
@@ -26,13 +26,18 @@ jobs:
           aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
           aws-region: us-east-1
 
+      - name: Configure SSH Key
+        run: |
+          echo "${{ secrets.SSH_KEY }}" > $HOME/.ssh/labsuser.pem
+          chmod 400 $HOME/.ssh/labsuser.pem
+
       - name: Force Update EC2 Instances
         env:
           AWS_REGION: us-east-1
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_SESSION_TOKEN: ${{ secrets.AWS_SESSION_TOKEN }}
-          SSH_KEY: ${{ secrets.SSH_KEY }}
+          SSH_KEY: $HOME/.ssh/labsuser.pem
           ECR_IMAGE: 533266957010.dkr.ecr.us-east-1.amazonaws.com/brewcraft-frontend:latest
         run: |
           INSTANCE_IPS=$(aws ec2 describe-instances \
