--- a/.github/workflows/force-update-ec2.yml
+++ b/.github/workflows/force-update-ec2.yml
@@ -46,18 +46,18 @@ jobs:
           SSH_KEY: $HOME/.ssh/labsuser.pem
           ECR_IMAGE: 533266957010.dkr.ecr.us-east-1.amazonaws.com/brewcraft-frontend:latest
         run: |
-          INSTANCE_IPS=$(aws ec2 describe-instances \
+                    INSTANCE_IPS=$(aws ec2 describe-instances \
               --filters "Name=tag:Name,Values=dev-brewcraft-instance" "Name=instance-state-name,Values=running" \
               --query 'Reservations[*].Instances[*].PublicIpAddress' \
               --output text)
-
+          
           if [ -z "$INSTANCE_IPS" ]; then
               echo "No running instances found"
               exit 1
           fi
-
+          
           for IP in $INSTANCE_IPS; do
-              ssh -i "$SSH_KEY" -o StrictHostKeyChecking=no ec2-user@$IP <<- ENDSSH
+              ssh -i "$SSH_KEY" -o StrictHostKeyChecking=no ec2-user@$IP << ENDSSH
                   set -e
                   aws ecr get-login-password --region ${AWS_REGION} | sudo docker login --username AWS --password-stdin 533266957010.dkr.ecr.${AWS_REGION}.amazonaws.com
                   sudo docker stop brewcraft-app 2>/dev/null || true
@@ -71,14 +71,14 @@ jobs:
                       ${ECR_IMAGE}
                   sleep 3
                   curl -f http://localhost:3000/health || echo "Health check warning"
-            ENDSSH
-
+          ENDSSH
+          
               if [ $? -eq 0 ]; then
                   echo "✓ Updated $IP"
               else
                   echo "✗ Failed to update $IP"
               fi
           done
-
+          
           echo "All instances updated!"
           echo "Wait 30 seconds for ALB health checks, then test: http://brewcraft.rocks"
